{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 9,
  "lineage": "8cb6ffc1-1a84-a839-03a7-be8c617701f5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c8e66233-44d0-4dac-aee5-55d5087af1de/resourceGroups/hyd123/providers/Microsoft.Network/networkInterfaces/ssaann-nic",
            "internal_domain_name_suffix": "pckrj5i5iiau3esberdvj5uj1d.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c8e66233-44d0-4dac-aee5-55d5087af1de/resourceGroups/hyd123/providers/Microsoft.Network/virtualNetworks/ssaann-10/subnets/hyd9900"
              }
            ],
            "location": "eastus",
            "name": "ssaann-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "hyd123"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c8e66233-44d0-4dac-aee5-55d5087af1de/resourceGroups/hyd123/providers/Microsoft.Network/networkSecurityGroups/ssaann-nsg1",
            "location": "eastus",
            "name": "ssaann-nsg1",
            "resource_group_name": "hyd123",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c8e66233-44d0-4dac-aee5-55d5087af1de/resourceGroups/hyd123/providers/Microsoft.Network/networkSecurityGroups/ssaann-nsg1/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "ssaann-nsg1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "hyd123",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.10.1.0/24",
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c8e66233-44d0-4dac-aee5-55d5087af1de/resourceGroups/hyd123/providers/Microsoft.Network/virtualNetworks/ssaann-10/subnets/hyd9900",
            "name": "hyd9900",
            "resource_group_name": "hyd123",
            "virtual_network_name": "ssaann-10"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c8e66233-44d0-4dac-aee5-55d5087af1de/resourceGroups/hyd123/providers/Microsoft.Network/virtualNetworks/ssaann-10/subnets/hyd9900",
            "network_security_group_id": "/subscriptions/c8e66233-44d0-4dac-aee5-55d5087af1de/resourceGroups/hyd123/providers/Microsoft.Network/networkSecurityGroups/ssaann-nsg1",
            "subnet_id": "/subscriptions/c8e66233-44d0-4dac-aee5-55d5087af1de/resourceGroups/hyd123/providers/Microsoft.Network/virtualNetworks/ssaann-10/subnets/hyd9900"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "guid": "fd149578-421f-4e01-9241-244754fe89db",
            "id": "/subscriptions/c8e66233-44d0-4dac-aee5-55d5087af1de/resourceGroups/hyd123/providers/Microsoft.Network/virtualNetworks/ssaann-10",
            "location": "eastus",
            "name": "ssaann-10",
            "resource_group_name": "hyd123",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}